increase performing counting sales in one month